After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647662 - meta_window_is_remote: If WM_CLIENT_MACHINE not set, don't assume remote
meta_window_is_remote: If WM_CLIENT_MACHINE not set, don't assume remote
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
: 647475 (view as bug list)
Depends on:
Blocks: GnomeShell301
 
 
Reported: 2011-04-13 14:34 UTC by Colin Walters
Modified: 2011-04-25 20:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
meta_window_is_remote: If WM_CLIENT_MACHINE not set, don't assume remote (1.03 KB, patch)
2011-04-13 14:34 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2011-04-13 14:34:01 UTC
Apparently the "fox" toolkit doesn't set WM_CLIENT_MACHINE; while we
could do gymnastics to attempt to figure this out (talk to the X
server?), better to just default to FALSE.
Comment 1 Colin Walters 2011-04-13 14:34:04 UTC
Created attachment 185875 [details] [review]
meta_window_is_remote: If WM_CLIENT_MACHINE not set, don't assume remote
Comment 2 Rui Matos 2011-04-13 14:47:46 UTC
*** Bug 647475 has been marked as a duplicate of this bug. ***
Comment 3 Dan Winship 2011-04-14 20:29:11 UTC
Comment on attachment 185875 [details] [review]
meta_window_is_remote: If WM_CLIENT_MACHINE not set, don't assume remote

ok
Comment 4 André Klapper 2011-04-15 09:12:29 UTC
Dan: You set the "accepted-commit_after_freeze" flag.
What freeze do you actually refer to?
Comment 5 Dan Winship 2011-04-15 13:25:59 UTC
gnome-shell has a self-imposed code freeze for 3.0.1 (with breaks approved by Owen). http://mail.gnome.org/archives/gnome-shell-list/2011-April/msg00073.html
Comment 6 Dan Winship 2011-04-20 20:12:20 UTC
Colin: what's the effect of this bug? Should we get it in for 3.0.1?
Comment 7 Sander Jansen 2011-04-20 20:18:36 UTC
gnome-shell doesn't load the .desktop application file when WM_CLIENT_MACHINE is not set.
Comment 8 Dan Winship 2011-04-21 14:59:11 UTC
possible 3.0.1
Comment 9 Colin Walters 2011-04-21 15:05:18 UTC
(In reply to comment #6)
> Colin: what's the effect of this bug? Should we get it in for 3.0.1?

It breaks apps from the FOX toolkit I guess...not really a huge deal.
Comment 10 Sander Jansen 2011-04-21 15:13:25 UTC
(In reply to comment #9)
> (In reply to comment #6)
> > Colin: what's the effect of this bug? Should we get it in for 3.0.1?
> 
> It breaks apps from the FOX toolkit I guess...not really a huge deal.

Yay... feel the gnome love :)
Comment 11 Owen Taylor 2011-04-21 19:46:57 UTC
Review of attachment 185875 [details] [review]:

I'm not aware of any gymnastics that we could do to figure this out, in say, the case of ssh tunneling a remote client may be connecting from a local unix socket. Patch looks safe, and "not remote" seems like the right default.
Comment 12 Colin Walters 2011-04-25 20:42:59 UTC
Attachment 185875 [details] pushed as 4ff4ebe - meta_window_is_remote: If WM_CLIENT_MACHINE not set, don't assume remote